feat(prize): add external prize mechanism
